tests/compile/fail/take_self_from_ref.stderr
error[E0277]: the size for values of type `[dyntable::DynRefInternalRepr<dyn SelfTaker>]` cannot be known at compilation time
  --> tests/compile/fail/take_self_from_ref.rs:11:2
   |
11 |     dynref.takes_self();
   |     ^^^^^^ ---------- required by a bound introduced by this call
   |     |
   |     doesn't have a size known at compile-time
   |
   = help: within `Dyn<dyn SelfTaker>`, the trait `Sized` is not implemented for `[dyntable::DynRefInternalRepr<dyn SelfTaker>]`
   = note: required because it appears within the type `Dyn<dyn SelfTaker>`
note: required by a bound in `SelfTaker::takes_self`
  --> tests/compile/fail/take_self_from_ref.rs:5:1
   |
5  | #[dyntable(relax_abi = true)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelfTaker::takes_self`
6  | trait SelfTaker {
7  |     fn takes_self(self);
   |        ---------- required by a bound in this
   = note: this error originates in the attribute macro `dyntable` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the size for values of type `[dyntable::DynRefInternalRepr<dyn SelfTaker>]` cannot be known at compilation time
  --> tests/compile/fail/take_self_from_ref.rs:15:2
   |
15 |     dynref.takes_self();
   |     ^^^^^^ ---------- required by a bound introduced by this call
   |     |
   |     doesn't have a size known at compile-time
   |
   = help: within `Dyn<dyn SelfTaker>`, the trait `Sized` is not implemented for `[dyntable::DynRefInternalRepr<dyn SelfTaker>]`
   = note: required because it appears within the type `Dyn<dyn SelfTaker>`
note: required by a bound in `SelfTaker::takes_self`
  --> tests/compile/fail/take_self_from_ref.rs:5:1
   |
5  | #[dyntable(relax_abi = true)]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `SelfTaker::takes_self`
6  | trait SelfTaker {
7  |     fn takes_self(self);
   |        ---------- required by a bound in this
   = note: this error originates in the attribute macro `dyntable` (in Nightly builds, run with -Z macro-backtrace for more info)
